fix code smell java 16